--- a/PAGES/favoritos.html
+++ b/PAGES/favoritos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favoritos</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="../CSS/municipios.css">
@@ -21,8 +21,8 @@
                     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
                 </a>
     
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -50,8 +50,8 @@
 				
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="navbar-brand" href="/index.html">
-							<img src="/logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+						<a class="navbar-brand" href="../index.html">
+							<img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
 						</a>
 					</li>
 				</ul>
