--- a/PAGES/municipioDetalles.html
+++ b/PAGES/municipioDetalles.html
@@ -7,7 +7,7 @@
     <title>Tiempo</title>
     <link rel="stylesheet" href="/CSS/municipiosDetalles.css">
     <script src="../JS/detallesMunicipio.js" defer type="module"></script>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="/JS/index.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -23,8 +23,8 @@
                     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="/index.html">
-                    <img src="/logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
                 </a>
     
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -74,8 +74,8 @@
 				
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="navbar-brand" href="/index.html">
-							<img src="/logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+						<a class="navbar-brand" href="../index.html">
+							<img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
 						</a>
 					</li>
 				</ul>
