--- a/PAGES/municipios.html
+++ b/PAGES/municipios.html
@@ -12,7 +12,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <title>Municipios</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
   <script src="/JS/index.js" defer></script>
   <script src="../JS/municipios.js" defer type="module"></script>
 
@@ -38,8 +38,8 @@
         aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/index.html">
-        <img src="/logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+      <a class="navbar-brand" href="../index.html">
+        <img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
       </a>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -76,8 +76,8 @@
 				
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="navbar-brand" href="/index.html">
-							<img src="/logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+						<a class="navbar-brand" href="../index.html">
+							<img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
 						</a>
 					</li>
 				</ul>
