--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ClimAPI</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 	<link rel="icon" type="image/png" href="logo3.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -21,7 +21,7 @@
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<a class="navbar-brand" href="#">
-				<img src="logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+				<img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
 			</a>
 
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
@@ -3674,7 +3674,7 @@
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
 						<a class="navbar-brand" href="#">
-							<img src="logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
+							<img src="../logo2.png" alt="Logo" width="100" height="80" class="d-inline-block align-text-top m-2">
 						</a>
 					</li>
 				</ul>
