--- a/PAGES/municipioDetalles.html
+++ b/PAGES/municipioDetalles.html
@@ -33,7 +33,7 @@
                             <a class="nav-link active" aria-current="page" href="#"><h4>Comunidades</h4></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><h4>Favoritos</h4></a>
+                            <a class="nav-link" href="../PAGES/favoritos.html"><h4>Favoritos</h4></a>
                         </li>
     
                     </ul>
@@ -55,15 +55,15 @@
                 <img id="estadoCielo" alt="Imagen del estado del cielo">
             </div>
             <div>
-                <h4>Temperatura actual: <span id="temperaturaActual"></span></h4>
-                <h5>Temperatura mínima: <span id="temperatura-min"></span></h5>
-                <h5>Temperatura máxima: <span id="temperatura-max"></span></h5>
+                <h4>Temperatura actual: <span id="temperaturaActual"></span>º</h4>
+                <h5>Temperatura mínima: <span id="temperatura-min"></span>º</h5>
+                <h5>Temperatura máxima: <span id="temperatura-max"></span>º</h5>
             </div>
             <div>
-                <h4>Humedad: <span id="humedadMunicipio"></span></h4>
-                <h4>Viento: <span id="vientoMunicipio"></span></h4>
+                <h4>Humedad: <span id="humedadMunicipio"></span>%</h4>
+                <h4>Viento: <span id="vientoMunicipio"></span> km/h</h4>
                 <h4>Precipitaciones: <span id="precipitacionesMunicipio"></span></h4>
-                <h4>Lluvia: <span id="municipioLluvia"></span></h4>
+                <h4>Lluvia: <span id="municipioLluvia"></span>%</h4>
             </div>
         </section>
        
