--- a/PAGES/favoritos.html
+++ b/PAGES/favoritos.html
@@ -42,7 +42,7 @@
         <h1 id="titulo">Favoritos <br></h1>
     </header>
     
-    <div id="favoritos" class="w-100 h-100"></div>
+    <div id="favoritos" class="container"></div>
 
     <footer>
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
