--- a/PAGES/favoritos.html
+++ b/PAGES/favoritos.html
@@ -42,7 +42,9 @@
         <h1 id="titulo">Favoritos <br></h1>
     </header>
     
-    <div id="favoritos" class="container"></div>
+    <div id="favoritos" class="row gap-3 justify-content-center align-content-center align-items-center">
+        
+    </div>
 
     <footer>
 		<nav class="navbar navbar-expand-lg bg-body-tertiary">
