--- a/PAGES/municipioDetalles.html
+++ b/PAGES/municipioDetalles.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tiempo</title>
-    <link rel="stylesheet" href="/CSS/municipiosDetalles.css">
+    <title>ClimAPI/Municipio/Detalles</title>
+    <link rel="icon" type="image/png" href="../logo3.png">
+    <link rel="stylesheet" href="../CSS/municipiosDetalles.css">
     <script src="../JS/detallesMunicipio.js" defer type="module"></script>
     <link rel="stylesheet" href="../style.css">
     <script src="/JS/index.js" defer></script>
@@ -47,7 +48,7 @@
                 </div>
             </div>
         </nav>
-        <h1 id="titulo">Tiempo <br></h1>
+        <h1 id="titulo"></h1>
     </header>
     <main>
         <section id="detallesMunicipio">
