--- a/PAGES/municipios.html
+++ b/PAGES/municipios.html
@@ -11,22 +11,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-  <title>Municipios</title>
+  <title>ClimAPI/Municipios</title>
+  <link rel="icon" type="image/png" href="../logo3.png">
   <link rel="stylesheet" href="../style.css">
-  <script src="/JS/index.js" defer></script>
+  <script src="../JS/index.js" defer></script>
   <script src="../JS/municipios.js" defer type="module"></script>
-
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/municipiosStyle.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"></script>
-    <title>Municipios</title>
-    <script src="../JS/municipios.js" defer type="module"></script>
 
   </head>
 
